# groovy

./: .gitignore  Cargo.toml  README.md
.github/workflows/: oleh-groovy-editor-portable.yml
portable/: OlehGroovyEditor.bat
scripts/: download-latest-portable.ps1  package-portable.ps1
src/: app.rs  collab.rs  diff_engine.rs  docx.rs  git_ops.rs  highlight.rs  lint.rs  main.rs  render.rs
web/: app.js  index.html  styles.css
