[package]
name = "oleh-groovy-editor"
version = "0.1.0"
edition = "2024"
description = "Browser-based Groovy and DOCX template studio for diaLIMS"
license = "MIT"

[dependencies]
axum = { version = "0.8.4", features = ["json"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net"] }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
dirs = "6.0.0"
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
webbrowser = "1.0.6"
chrono = { version = "0.4.42", default-features = true, features = ["clock", "std"] }
